-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9
-
None
-
1c440fb89 (dev), 9cf328506 (dev), ca0348fad (dev), 2b720dbe7 (dev), 276a5a875 (dev), 9ee8748f3 (6.9), c98312b1b (6.8), 7bbed761c (6.9), 45bf773e3 (tqtc/lts-6.8)
qmllint seems to use the wrong settings names for it categories, most notably because of copy-paste errors:
= done
- unresolved alias uses PropertyAliasCycles from alias cycle category

- recursion depth errors uses ImportFailure from import category (btw it has the wrong description too?!)
QQmlJS::LoggerCategory{ qmlImport.name().toString(), QStringLiteral("ImportFailure"), QStringLiteral("Warn about failing imports and deprecated qmltypes"), QtWarningMsg }, QQmlJS::LoggerCategory{ qmlRecursionDepthErrors.name().toString(), QStringLiteral("ImportFailure"), QStringLiteral("Warn about failing imports and deprecated qmltypes"), QtWarningMsg, false, true }, - top level component has a typo in its description

- missing enum entry is not registered in qmllint

| For Gerrit Dashboard: QTBUG-135020 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 633275,5 | qmllint: put all warning categories in one central location | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 633641,3 | qmllint: register missing-enum-entry category | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 633803,2 | qmllint: fix setting for alias cycle and unresolved alias | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 633804,2 | qmllint: clean up recursion-depth-errors category | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 633805,2 | qmllint: fix a typo in top-level-component description | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 634589,3 | qmllint: fix a typo in top-level-component description | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 636276,2 | qmllint: fix a typo in top-level-component description | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 642459,3 | qmllint: register missing-enum-entry category | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 642597,2 | qmllint: register missing-enum-entry category | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |